--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "lucide-react": "^0.554.0",
+    "react": "18.2.0",
+    "lucide-react": "0.263.1",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
